# duplipy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
duplipy/: __init__.py  detector.py  loader.py
examples/: .gitignore  demo.py
